src/test/testData/component/interfaceOrAbstract/KClassComponent.kt
import dagger.Component

@<error descr="@Component may only be applied to an interface or abstract class">Component</error>
class KClassComponent {

}